# faasm

./: .gitignore  .gitmodules  CMakeLists.txt  requirements.txt
cmake/: ExternalProjects.cmake
include/storage/: FileDescriptor.h
include/wamr/: WAMRWasmModule.h
include/wasm/: WasmEnvironment.h
native/include/: mpi.h
src/faaslet/: CMakeLists.txt
src/runner/: CMakeLists.txt
src/wamr/: CMakeLists.txt  WAMRWasmModule.cpp  codegen.cpp  faasm.cpp
src/wavm/: timing.cpp
tasks/: dev.py
